// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for even numbers of cards 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#b71845",
      },
      Object {
        "alignItems": "center",
        "borderRadius": 10,
        "flex": 1,
        "height": 200,
        "justifyContent": "center",
      },
    ]
  }
>
  <Text
    style={
      Object {
        "color": "#000",
        "fontSize": 40,
        "marginTop": 20,
        "textAlign": "center",
      }
    }
  >
     
    Test
     
  </Text>
  <Text
    style={
      Object {
        "color": "#000",
        "fontSize": 20,
        "marginBottom": 5,
        "textAlign": "center",
      }
    }
  >
     
    2
     cards 
  </Text>
</View>
`;

exports[`renders correctly for odd numbers of cards 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#00965e",
      },
      Object {
        "alignItems": "center",
        "borderRadius": 10,
        "flex": 1,
        "height": 200,
        "justifyContent": "center",
      },
    ]
  }
>
  <Text
    style={
      Object {
        "color": "#000",
        "fontSize": 40,
        "marginTop": 20,
        "textAlign": "center",
      }
    }
  >
     
    Test
     
  </Text>
  <Text
    style={
      Object {
        "color": "#000",
        "fontSize": 20,
        "marginBottom": 5,
        "textAlign": "center",
      }
    }
  >
     
    2
     cards 
  </Text>
</View>
`;
